--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -1,61 +1,64 @@
+<!DOCTYPE html>
 <html>
-<style>
-    form {
-        border: 3px solid #f1f1f1;
-    }
+    <head>
+        <meta charset="utf-8">
+        <title>Django Login</title>
+        <style>
+        form {
+            border: 3px solid #f1f1f1;
+        }
 
-    input[type=text],
-    input[type=password] {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-    }
+        input[type=text],
+        input[type=password] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
 
-    button {
-        background-color: #4CAF50;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-    }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
 
-    #register {
-        background-color: #f62b2b;
-    }
+        #register {
+            background-color: #f62b2b;
+        }
 
-    .container {
-        padding: 16px;
-    }
+        .container {
+            padding: 16px;
+        }
 
-    span.psw {
-        float: right;
-        padding-top: 16px;
-    }
-</style>
+        span.psw {
+            float: right;
+            padding-top: 16px;
+        }
+        </style>
+    </head>
+    <body>
+        <h2>Login</h2> {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p> {% endif %}
 
-<body>
-    <h2>Login</h2> {% if error_message %}
-    <p><strong>{{ error_message }}</strong></p> {% endif %}
+        <form action="{% url 'index' %}" method="post">
+            {% csrf_token %}
+            <div class="container">
+                <label><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" name="username" required>
 
-    <form action="{% url 'index' %}" method="post">
-        {% csrf_token %}
-        <div class="container">
-            <label><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" required>
+                <label><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="password" required>
 
-            <label><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required>
+                <button type="submit">Login</button>
+                <button id="register" type="button">Register</button>
+            </div>
+        </form>
 
-            <button type="submit">Login</button>
-            <button id="register" type="button">Register</button>
-        </div>
-    </form>
-
-</body>
-
+    </body>
 </html>
