--- a/login/templates/login/main_page.html
+++ b/login/templates/login/main_page.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Login Successfully.</h1>
-        <form action="{% url 'logout' %}" method="post">
+        <form action="{% url 'login:logout' %}" method="post">
             <div class="container">
                 <button type="submit" name="logout">Log out</button>
             </div>
