--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -8,7 +8,7 @@
         <h2>Login</h2> {% if error_message %}
         <p><strong>{{ error_message }}</strong></p> {% endif %}
 
-        <form action="{% url 'login:index' %}" method="post">
+        <form action="{% url 'login:login' %}" method="post">
             {% csrf_token %}
             <div class="container">
                 <label><b>Username</b></label>
