--- a/login/templates/login/main_page.html
+++ b/login/templates/login/main_page.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Login Successfully.</h1>
         <form action="{% url 'login:logout' %}" method="post">
+            {% csrf_token %}
             <div class="container">
                 <button type="submit" name="logout">Log out</button>
             </div>
