--- a/login/templates/login/main_page.html
+++ b/login/templates/login/main_page.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Logged In</title>
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'login/style.css' %}" />
     </head>
     <body>
         <h1>Login Successfully.</h1>
