--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Django Login</title>
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'login/style.css' %}" />
     </head>
     <body>
         <h2>Login</h2> {% if error_message %}
